# data_structure_c

./: .gitignore  CMakeLists.txt  README.md
include/: list.h
src/: list.c
tests/: list_test.c
